Ignore strong tags in study content

--- a/styles.css
+++ b/styles.css
@@ -13,4 +13,8 @@
   border: 1px solid black;
   padding: 0 10px 0 10px
 }
+.study-content strong {
+  /* The source docx files from which the study content was rendered contains various text formatting issues where font weight is interpreted as bold. Rather than address many docx files text formatting we decided to ignore strong tags in the study content for the meantime */
+  font-weight: normal;
+}
 
