--- a/styles.css
+++ b/styles.css
@@ -23,4 +23,16 @@
 .study-content a{
   word-wrap: break-word;
 }
+.study-content h1 {
+  font-size: 1.25em;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+.study-content h2 {
+  font-size: 1.0em;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
 
