--- a/styles.css
+++ b/styles.css
@@ -38,4 +38,18 @@ html {
   margin-top: 0;
   margin-bottom: 0.5em;
 }
-
+.video {
+  margin: 0;
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%;
+  background-color: #ccc;
+  position: relative;
+  margin-bottom: 20px;
+}.video iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
